REFACTOR: repackage for proper pip installation
move into inner kimkit directory
uncapitalize KIMkit --> kimkit
fix setup.py and add MANIFEST.in to include data files
depricate KIMkit-env, edit config.py to accomidate
fix internal imports

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 *.pyc
-logs/*
+kimkit/logs/*
 *.tmp
 *.swp
 docs/_build
+kimkit/Docs/_build/*
 stupid.*
 .ropeproject
+build/
 venv
 KIMkit-env
+kimkit/default-environment
 __pycache__
 *.bak
 *vscode*
