--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ __pycache__
 editors.txt
 test.py
 *.egg-info/
-repository/*
+kimkit/repository/*
+pyproject.toml
 KIMkit_kim_api_environment_collection/*
 *.DS_Store*
