--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,4 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "kimkit"
 dynamic = ["version"]
+dependencies=["pytz", "kim_edn", "packaging", "pygments", "pymongo"]
