--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "kimkit"
 authors = [{"name"="Claire Waters", "email"="bwaters@umn.edu"}]
 readme = "README.md"
-license = "Apache-2.0"
+license = "Apache-2.0 WITH LLVM-exception"
 license-files = ["LICENSE"]
 requires-python = ">=3.9"
 dynamic = ["version"]
